// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select2TextField render() renders with flat choices 1`] = `
<div
  className="control-group"
>
  <div
    className="controls"
  >
    <input
      className="form-control"
      disabled={false}
      id="id-fieldName"
      onChange={[Function]}
      placeholder="--"
      required={false}
      value="fieldValue"
    />
  </div>
</div>
`;

exports[`Select2TextField render() renders with form context 1`] = `
<div
  className="control-group"
>
  <div
    className="controls"
  >
    <input
      className="form-control"
      disabled={false}
      id="id-fieldName"
      onChange={[Function]}
      placeholder="--"
      required={false}
      value="fieldValue"
    />
  </div>
</div>
`;

exports[`Select2TextField render() renders with paired choices 1`] = `
<div
  className="control-group"
>
  <div
    className="controls"
  >
    <input
      className="form-control"
      disabled={false}
      id="id-fieldName"
      onChange={[Function]}
      placeholder="--"
      required={false}
      value="fieldValue"
    />
  </div>
</div>
`;

exports[`Select2TextField render() renders without form context 1`] = `
<div
  className="control-group"
>
  <div
    className="controls"
  >
    <input
      className="form-control"
      disabled={false}
      id="id-fieldName"
      onChange={[Function]}
      placeholder="--"
      required={false}
      value=""
    />
  </div>
</div>
`;
